@@ -77,9 +77,9 @@ File/Handle functions
 .Ft int
 .Fn libsmraw_handle_set_segment_filename "libsmraw_handle_t *handle, const char *filename, size_t filename_length, libsmraw_error_t **error"
 .Ft int
-.Fn libsmraw_handle_get_segment_file_size "libsmraw_handle_t *handle, size64_t *segment_file_size, libsmraw_error_t **error"
+.Fn libsmraw_handle_get_maximum_segment_size "libsmraw_handle_t *handle, size64_t *maximum_segment_size, libsmraw_error_t **error"
 .Ft int
-.Fn libsmraw_handle_set_segment_file_size "libsmraw_handle_t *handle, size64_t segment_file_size, libsmraw_error_t **error"
+.Fn libsmraw_handle_set_maximum_segment_size "libsmraw_handle_t *handle, size64_t maximum_segment_size, libsmraw_error_t **error"
 .Ft int
 .Fn libsmraw_handle_get_filename_size "libsmraw_handle_t *handle, size_t *filename_size, libsmraw_error_t **error"
 .Ft int
