@@ -12,6 +12,9 @@ Test
 * retrieve data from the information file on open
 * make sure certain values cannot be changed if writing/reading from raw files
 
+20100128
+* renamed get/set_segment_size to get/set_maximum_segment_size
+
 20100125
 * updated libbfio
 * added libsmraw_handle_set_maximum_amount_of_open_handles
